реализовать тз 12 спринта v2