@@ -1,5 +1,6 @@
-package ru.yandex.practicum.filmorate.service;
+package ru.yandex.practicum.filmorate.service.genre;
 
+import java.util.Collection;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.dto.GenreDto;
@@ -7,19 +8,17 @@ import ru.yandex.practicum.filmorate.mapper.GenreMapper;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.storage.genre.GenreDbStorage;
 
-import java.util.Collection;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 public class GenreService {
+
   private final GenreDbStorage genreStorage;
 
   public Collection<GenreDto> getAll() {
     return genreStorage.getAll()
         .stream()
         .map(GenreMapper::mapToGenreDto)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public GenreDto getGenre(Short id) {
